Fix article title overlapped by logo for screen width of 768

--- a/css/article.css
+++ b/css/article.css
@@ -158,6 +158,9 @@
 }
 
 @media only screen and (max-width: 768px) {
+  section {
+    padding: 90px 0px;
+  }
   .no-padding-bottom {
     margin-top: 25px;
   }
